--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html>
     <head>
         <meta charset="utf-8">
@@ -7,11 +6,20 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link rel="stylesheet" href="">
     </head>
     <body>
         <main>
-            <h1>Type /api/family</h1>
+            <h1>Type /api/family to see the family</h1>
+            <form id="fam-form" action="">
+              <input type="text" placeholder="name" id="familyName">
+              <input type="text" placeholder="relationship" id="familyRelation">
+              <button>Submit!</button>
+          </form>
+
         </main>
+        
     </body>
+    <script src="./scripts/index.js"></script>
 </html>
